# qianyuan-quant-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  coverage.xml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: README_TEMPLATE.md
.github/workflows/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  main.yml
backend/: app.py  main.py
backend/api/: __init__.py  auth.py  dependencies.py  routes.py  strategies.py  trade.py  trades.py  users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: backtest.py  market_data.py  risk.py  user.py
backend/app/services/: backtest_service.py  data_service.py  risk_service.py  strategy_service.py  user_service.py
backend/auth/: auth.py
backend/config/: config_manager.py  confing.py
backend/core/: config.py
backend/data/: data_processor.py
backend/models/: database.py  order.py  requests.py  trainer.py
backend/services/: analysis_service.py  auth_service.py  backtest_service.py  execution_engine.py  market_data_service.py  notification_service.py  report_service.py  risk_control_service.py  strategy_service.py  trading_service.py  websocket_service.py
backend/strategy/: backtest_template.py  base_strategy.py  ma_cross_strategy.py
backend/utils/: api_docs_generator.py
config/: __init__.py  base.yml  config_manager.py  development.yml  production.yml
deploy/: Dockerfile.backend  Dockerfile.websocket  docker-compose.yml  prometheus.yml
deploy/prometheus/: prometheus.yml
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  APP.js  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.js  App.tsx  index.css  main.ts  main.tsx  setupTests.ts
frontend/src/ayouts/: MainLayout.tsx
frontend/src/components/: Button.js  ChartComponent.js  StrategyManager.js  TradingPanel.js
infra/docker/: Dockerfile  docker-compose.yml
infra/k8s/: deployment.yaml
infra/terraform/: main.tf
microservices/market_data_service/: main.py  service.py
microservices/order_execution/: order_manager.py  order_service.py
microservices/risk_management/: risk_manager.py  risk_service.py
migrations/: env.py
migrations/versions/: ad39a447c5bb_initial_migration.py
monitoring/: performance_monitor.py
monitoring/elastic_stack/: filebeat.yml
monitoring/grafana/: Dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: backup_db.sh  check_structure.py  create_admin.py  create_initial_user.py  start.sh
tests/: conftest.py  test_auth.py  test_strategies.py
tests/e2e/: test_trading_flow.py
tests/integration/: test_api.py  test_websocket.py
tests/unit/: test_market_data.py  test_risk_control.py  test_trading.py
(+375 files in other folders)
