[build-system]
requires = ["setuptools>=64.0.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "qianyuan-quant"
version = "0.1.0"
description = "乾元量化交易系统"
authors = [
    {name = "Han Mingyu", email = "13364694109ai@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "websockets>=14.2",
    "redis>=5.0.1",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "flask>=3.0.0",
    "pandas-ta>=0.3.14b0",
    "PyYAML>=6.0.1",
    "websocket-client>=1.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "flake8>=7.1.1",
    "black>=24.2.0",
    "isort>=5.13.2",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
packages = ["backend", "config"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=backend --cov-report=xml"
